--- a/css/style.css
+++ b/css/style.css
@@ -76,16 +76,12 @@ header em {
 }
 
 section {
-	padding: 25px;
+	padding: 20px;
 }
-.first-panel {
-	border: solid 3px #ff8b00;
-	margin: 75px;
-
-}
-
 .instructions {
 	color: #ff8b00;
+	border: solid 3px #ff8b00;
+	margin-top: 20px;
 }
 .pull-left {
 	float: left;
@@ -100,12 +96,13 @@ img {
 .pull-right img {
 
 	border: solid 2px gray;
-	margin-right: 25px;
+	margin: 25px;
 	float: right;
 }
 
 img.pull-left {
 	border: solid 2px white;
+	margin-left: -0.2em;
 }
 .section-one {
 	background-color: #D3D3D3;
@@ -124,7 +121,6 @@ img.pull-left {
 	font-size: 1.2em;
 }
 table {
-	margin: 25px;
 	color: white;
 	background-color: #ff8b00;
 	border-collapse: collapse;
